infra-services-with-prometheus/04-RabbitMQ/05-statefulset-rabbitmq.yaml
# 
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
spec:
  serviceName: rabbitmq
  replicas: 3
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
      annotations: {}
        #prometheus.io/scrape: "true"
        #prometheus.io/port: "15692"
        #prometheus.io/path: "/metrics"
        # Grafana Dashboard ID 10991 and 11340.
    spec:
      serviceAccountName: rabbitmq
      containers:
      - name: rabbitmq
        #image: registry.magedu.com/rabbitmq/rabbitmq:3.12-management
        image: rabbitmq:3.13-management
        ports:
        - containerPort: 15672
          name: discovery
        - containerPort: 15692
          name: prometheus
        - containerPort: 5672
          name: amqp
        volumeMounts:
        - name: data
          mountPath: /var/lib/rabbitmq
          readOnly: false
        - name: config-file
          mountPath: /config/
        - name: plugins-file
          mountPath: /etc/rabbitmq/
      volumes:
      - name: config-file
        emptyDir: {}
      - name: plugins-file
        emptyDir: {}
      - name: config
        configMap:
          name: rabbitmq-config
          defaultMode: 0755
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: openebs-hostpath
      resources:
        requests:
          storage: 5Gi
---
