infra-services-with-prometheus/04-RabbitMQ/06-ingress-rabbitmq.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-svc
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "15692"
    prometheus.io/path: "/metrics"
    # Grafana Dashboard ID 10991 and 11340.
spec:
  ports:
  - port: 15672
    targetPort: 15672
    name: discovery
  - port: 15692
    targetPort: 15692
    name: prometheus
  - port: 5672
    targetPort: 5672
    name: amqp
  selector:
    app: rabbitmq
---
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq
  annotations:
    ingress.cilium.io/loadbalancer-mode: 'shared'
    ingress.cilium.io/service-type: 'Loadbalancer'
spec:
  ingressClassName: cilium
  rules:
  - host: rabbitmq.magedu.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rabbitmq-svc
            port:
              number: 15672
